--- a/.github/workflows/dind_os_CI.yml
+++ b/.github/workflows/dind_os_CI.yml
@@ -13,7 +13,14 @@ on:
           Otherwise, the specified docker image is tested. For example "marqoai/marqo:test"
   push:
     branches:
-      mainline
+      - 'releases/1.5.x'
+      - 'releases/1.4.x'
+    paths-ignore:
+      - '**.md'
+  pull_request:
+    branches:
+      - 'releases/1.5.x'
+      - 'releases/1.4.x'
     paths-ignore:
       - '**.md'
 
@@ -40,7 +47,7 @@ jobs:
         with:
           mode: start
           github-token: ${{ secrets.GH_PERSONAL_ACCESS_TOKEN }}
-          ec2-image-id:  ${{ secrets.AMD_200GB_EC2_IMAGE_ID }}
+          ec2-image-id: ${{ secrets.AMD_200GB_EC2_IMAGE_ID }}
           ec2-instance-type: t3.xlarge
           subnet-id: ${{ secrets.AMD_SUBNET_ID }}
           security-group-id: ${{ secrets.AMD_SECURITY_GROUP_ID }}
@@ -49,11 +56,11 @@ jobs:
     name: Run Docker-in-Docker API Tests
     needs: Start-Runner # required to start the main job when the runner is ready
     runs-on: ${{ needs.start-runner.outputs.label }} # run the job on the newly created runner
-                
-    environment: marqo-test-suite 
+
+    environment: marqo-test-suite
     
     steps:
-       
+
       - name: Checkout marqo repo
         uses: actions/checkout@v3
         with:
@@ -64,7 +71,7 @@ jobs:
         with:
           python-version: "3.8"
           cache: "pip"
-          
+
       - name: Install Dependencies
         run: |
           #pip install -r requirements.txt
@@ -72,25 +79,38 @@ jobs:
           pip install flake8
       
       # linting here
-  
+
       - name: Checkout marqo-api-tests repo
         uses: actions/checkout@v3
         with:
           repository: marqo-ai/marqo-api-tests
-          
+          ref: 1.4.x
+
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
-          
-      - name: Set up Environment
+
+      - name: Get branch name from PR
+        id: get_branch
         run: |
-          # Set up conf file
-          echo 'export MARQO_API_TESTS_ROOT="${{ github.workspace }}"' >> conf
-          
-      - name: Run Integration Tests - dind_os
+          BRANCH_NAME=${GITHUB_HEAD_REF}
+          echo "MQ_API_TEST_BRANCH=${BRANCH_NAME}" >> $GITHUB_ENV
+
+      - name: Set up Other Environment
         run: |
-          export MQ_API_TEST_BRANCH=$(echo "${GITHUB_REF}" | cut -d'/' -f3-)
+          echo 'export MARQO_API_TESTS_ROOT="${{ github.workspace }}"' >> $GITHUB_ENV
+          echo "MQ_API_TEST_BRANCH=$MQ_API_TEST_BRANCH" >> $GITHUB_ENV
           CUSTOM_TEST_IMG="${{ github.event.inputs.image_to_test }}"
           export MQ_API_TEST_IMG=${CUSTOM_TEST_IMG:-"marqo_docker_0"}
+          echo "MQ_API_TEST_IMG=$MQ_API_TEST_IMG" >> $GITHUB_ENV
+          export MQ_PY_MARQO_BRANCH=git+https://github.com/marqo-ai/py-marqo.git
+          echo "MQ_PY_MARQO_BRANCH=$MQ_PY_MARQO_BRANCH" >> $GITHUB_ENV
+          
+          echo "Marqo Branch: $MQ_API_TEST_BRANCH"
+          echo "API Test branch: 1.4.x"
+          echo "Py-marqo branch: 1.4.x"
+
+      - name: Run Integration Tests - dind_os
+        run: |
           tox -e py3-dind_os
   
   Stop-Runner:
