--- a/requirements.dev.txt
+++ b/requirements.dev.txt
@@ -20,37 +20,37 @@ validators==0.20.0
 sentence-transformers==2.2.2
 open_clip_torch==2.24.0
 clip-marqo==1.0.2
-#protobuf==3.20.1
-#onnx==1.12.0
 onnxruntime==1.13.1
 pandas==1.5.1
-#optimum==1.4.1 #overriden in marqo
 opencv-python-headless==4.6.0.66
 psutil==5.9.4
 multilingual-clip==1.0.10
 redis==4.4.2
-
-# pin specific packages (last working 0.0.19 image)
-# to fix ARM64 build scikit-learn error
-pyvespa==0.37.1
-
 platformdirs==3.5.0
 safetensors==0.4.1
 timm==0.9.12
-#transformers==4.29.0 #overriden in marqo
-
 flatbuffers==23.5.9
 certifi==2019.11.28
 idna==2.8
 six==1.14.0
 typing-extensions==4.5.0
 urllib3==1.26.16
+pyvespa==0.37.1
+
+# These versions are from marqo-base, but does not work on Mac OS
+protobuf==3.20.1; sys_platform != 'darwin'
+onnx==1.12.0; sys_platform != 'darwin'
+
+# These versions works on Mac OS:
+protobuf==3.20.2; sys_platform == 'darwin'
+onnx==1.16.1; sys_platform == 'darwin'
+
+#optimum==1.4.1 #overriden in marqo
+#transformers==4.29.0 #overriden in marqo
+
 # END: from marqo-base
 
 -r requirements.txt
-
-onnx
-protobuf
 
 # test requirements
 pytest==7.4.3
