--- a/.github/workflows/largemodel_unit_test_CI.yml
+++ b/.github/workflows/largemodel_unit_test_CI.yml
@@ -130,7 +130,7 @@ jobs:
           export VESPA_QUERY_URL=http://localhost:8080
           
           export PYTHONPATH="./marqo/tests:./marqo/src:./marqo"
-          pytest marqo/tests --largemodel
+          pytest marqo/tests --largemodel --ignore=marqo/tests/test_documentation.py
 
   Stop-Runner:
     name: Stop self-hosted EC2 runner
