--- a/requirements.dev.txt
+++ b/requirements.dev.txt
@@ -75,9 +75,10 @@ ftfy==6.1.1
 iopath==0.1.10
 peft @ git+https://github.com/huggingface/peft@08cb3dde577747f6ca6638c884fd66fd16cf2e9d
 pytorchvideo @ git+https://github.com/facebookresearch/pytorchvideo.git@28fe037d212663c6a24f373b94cc5d478c8c1a1d
+torchaudio
 scipy==1.10.1
 tensorboardX==2.6.1
-tokenizers==0.19.3
+tokenizers==0.19.1
 tqdm==4.65.0
 scikit-learn==1.3.0
 braceexpand==0.1.7
