--- a/.github/workflows/cpu_docker_marqo.yml
+++ b/.github/workflows/cpu_docker_marqo.yml
@@ -107,6 +107,18 @@ jobs:
           
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
+
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: ${{ secrets.AWS_REGION }}
+
+      - name: Login to ECR
+        uses: docker/login-action@v2
+        with:
+          registry: 424082663841.dkr.ecr.us-east-1.amazonaws.com/marqo-base
           
       - name: Set up Environment
         run: |
