--- a/requirements.txt
+++ b/requirements.txt
@@ -22,6 +22,7 @@ pycurl==7.45.3
 certifi==2019.11.28
 transformers==4.41.2
 optimum==1.20.0
+protobuf==5.27.2
 
 
 # LanguageBind
@@ -29,14 +30,14 @@ accelerate==0.20.3
 datasets==2.13.0
 decord==0.6.0 # ERROR: Could not find a version that satisfies the requirement decord==0.6.0 (from versions: none)
 # This is due to decord not having a wheel for ARM64. we can use pip install eva-decord
-eva-decord
+eva-decord==0.6.1
 einops==0.6.1
 evaluate==0.4.0
 ftfy==6.1.1
 iopath==0.1.10
 peft @ git+https://github.com/huggingface/peft@08cb3dde577747f6ca6638c884fd66fd16cf2e9d
 pytorchvideo @ git+https://github.com/facebookresearch/pytorchvideo.git@28fe037d212663c6a24f373b94cc5d478c8c1a1d
-torchaudio
+torchaudio==2.4.0
 scipy==1.10.1
 tensorboardX==2.6.1
 tokenizers
@@ -45,7 +46,5 @@ scikit-learn==1.3.0
 braceexpand==0.1.7
 webdataset==0.2.48
 SoundFile
-
-
-ffmpeg
-librosa
+ffmpeg==1.4
+librosa==0.10.2.post1
