--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,5 @@
-# This is a reduced set of requirements used for Marqo's tensor search module
-# If you are running this on your local machine you will need to install additional
-# requirements specified here: https://github.com/marqo-ai/marqo-base/blob/main/requirements.txt
+# TODO: remove these, only keep test packages
+# tensor search, identical to requirements.txt:
 requests==2.28.1
 anyio==3.7.1
 fastapi==0.86.0
@@ -12,25 +11,64 @@ urllib3==1.26.0
 pydantic==1.10.11
 httpx==0.25.0
 semver==3.0.2
-scipy==1.10.1
 memory-profiler==0.61.0
-cachetools==5.3.1
-pynvml==11.5.0 # For cuda utilization
-readerwriterlock==1.0.9
+pynvml==11.5.0
 kazoo==2.10.0
 pycurl==7.45.3
 certifi==2019.11.28
 transformers==4.31.0 # Consider 4.31.0 for _expand_mask
+
+# s2_inference:
+more_itertools
+boto3==1.25.4
+botocore==1.28.4
+nltk==3.7
+torch==1.13.1
+torchvision==0.14.1
+Pillow==9.3.0
+numpy==1.23.4
+validators==0.20.0
+sentence-transformers==2.2.2
+open_clip_torch==2.24.0
+clip-marqo==1.0.2
+onnx
+protobuf
+onnxruntime==1.13.1
+pandas==1.5.1
 optimum==1.20.0
+opencv-python-headless==4.6.0.66
+psutil==5.9.4
+multilingual-clip==1.0.10
+redis==4.4.2
+readerwriterlock==1.0.9
+cachetools==5.3.1
+
+# pin specific packages (last working 0.0.19 image)
+# to fix ARM64 build scikit-learn error
+platformdirs==3.5.0
+safetensors==0.4.1
+timm==0.9.12
+
+flatbuffers==23.5.9
+certifi==2019.11.28
+idna==2.8
+six==1.14.0
+typing-extensions==4.5.0
+urllib3==1.26.0
+pydantic==1.10.11
+httpx==0.25.0
+
+# test requirements
+pyvespa==0.37.1
+pytest==7.4.3
+
 
 # LanguageBind
-torch==1.13.1
-
 accelerate==0.20.3
 datasets==2.13.0
 decord==0.6.0 # ERROR: Could not find a version that satisfies the requirement decord==0.6.0 (from versions: none)
 # This is due to decord not having a wheel for ARM64. we can use pip install eva-decord
-eva-decord==0.6.1
+eva-decord
 einops==0.6.1
 evaluate==0.4.0
 ftfy==6.1.1
@@ -46,5 +84,7 @@ scikit-learn==1.3.0
 braceexpand==0.1.7
 webdataset==0.2.48
 SoundFile
-ffmpeg==1.4
-librosa==0.10.2.post1
+
+
+ffmpeg
+librosa
