--- a/requirements.txt
+++ b/requirements.txt
@@ -12,15 +12,36 @@ pydantic==1.10.11
 httpx==0.25.0
 semver==3.0.2
 memory-profiler==0.61.0
-cachetools==5.3.1
 pynvml==11.5.0
-readerwriterlock==1.0.9
 kazoo==2.10.0
 pycurl==7.45.3
 certifi==2019.11.28
-transformers==4.31.0 # Consider 4.31.0 from 4.41.2 for _expand_mask
-optimum==1.20.0
+transformers==4.31.0 # Consider 4.31.0 for _expand_mask
 
+# s2_inference:
+more_itertools
+boto3==1.25.4
+botocore==1.28.4
+nltk==3.7
+torch==1.13.1
+torchvision==0.14.1
+Pillow==9.3.0
+numpy==1.23.4
+validators==0.20.0
+sentence-transformers==2.2.2
+open_clip_torch==2.24.0
+clip-marqo==1.0.2
+onnx
+protobuf
+onnxruntime==1.13.1
+pandas==1.5.1
+optimum==1.20.0
+opencv-python-headless==4.6.0.66
+psutil==5.9.4
+multilingual-clip==1.0.10
+redis==4.4.2
+readerwriterlock==1.0.9
+cachetools==5.3.1
 
 # pin specific packages (last working 0.0.19 image)
 # to fix ARM64 build scikit-learn error
@@ -62,3 +83,6 @@ scikit-learn==1.3.0
 braceexpand==0.1.7
 webdataset==0.2.48
 SoundFile
+
+
+librosa
