--- a/requirements.dev.txt
+++ b/requirements.dev.txt
@@ -73,8 +73,8 @@ einops==0.6.1
 evaluate==0.4.0
 ftfy==6.1.1
 iopath==0.1.10
-peft @ git+https://github.com/huggingface/peft@08cb3dde577747f6ca6638c884fd66fd16cf2e9d
-pytorchvideo @ git+https://github.com/facebookresearch/pytorchvideo.git@28fe037d212663c6a24f373b94cc5d478c8c1a1d
+peft 
+pytorchvideo 
 torchaudio
 scipy==1.10.1
 tensorboardX==2.6.1
@@ -83,8 +83,8 @@ tqdm==4.65.0
 scikit-learn==1.3.0
 braceexpand==0.1.7
 webdataset==0.2.48
-SoundFile
+SoundFile==0.12.1
 
-ffmpeg
-ffmpeg-python
-librosa
+python-magic==0.4.27
+ffmpeg-python==0.2.0
+librosa==0.10.2.post1
