--- a/requirements.dev.txt
+++ b/requirements.dev.txt
@@ -83,7 +83,7 @@ tqdm==4.65.0
 #scikit-learn==1.3.0
 #braceexpand==0.1.7
 #webdataset==0.2.48
-#SoundFile==0.12.1
+SoundFile==0.12.1
 
 python-magic==0.4.27
 ffmpeg-python==0.2.0
