--- a/requirements.dev.txt
+++ b/requirements.dev.txt
@@ -79,7 +79,7 @@ torchaudio
 #scipy==1.10.1
 #tensorboardX==2.6.1
 #tokenizers
-tqdm==4.65.0
+#tqdm==4.65.0
 #scikit-learn==1.3.0
 #braceexpand==0.1.7
 #webdataset==0.2.48
@@ -88,3 +88,18 @@ SoundFile==0.12.1
 python-magic==0.4.27
 ffmpeg-python==0.2.0
 #librosa==0.10.2.post1
+
+
+# LanguageBind
+decord==0.6.0 # ERROR: Could not find a version that satisfies the requirement decord==0.6.0 (from versions: none)
+# This is due to decord not having a wheel for ARM64. we can use pip install eva-decord
+eva-decord
+einops==0.6.1
+#peft @ git+https://github.com/huggingface/peft@08cb3dde577747f6ca6638c884fd66fd16cf2e9d
+peft==0.4.0
+pytorchvideo @ git+https://github.com/facebookresearch/pytorchvideo.git@28fe037d212663c6a24f373b94cc5d478c8c1a1d
+torchaudio
+SoundFile==0.12.1
+
+python-magic==0.4.27
+ffmpeg-python==0.2.0
