--- a/requirements.txt
+++ b/requirements.txt
@@ -16,7 +16,6 @@ pynvml==11.5.0
 kazoo==2.10.0
 pycurl==7.45.3
 certifi==2019.11.28
-#transformers==4.31.0 # Consider 4.31.0 for _expand_mask
 transformers==4.41.2
 
 # s2_inference:
@@ -65,27 +64,11 @@ pytest==7.4.3
 
 
 # LanguageBind
-#accelerate==0.20.3
-#datasets==2.13.0
-#decord==0.6.0 # ERROR: Could not find a version that satisfies the requirement decord==0.6.0 (from versions: none)
-# This is due to decord not having a wheel for ARM64. we can use pip install eva-decord
-eva-decord
+
+eva-decord==0.6.1
 einops==0.6.1
-#evaluate==0.4.0
-#ftfy==6.1.1
-#iopath==0.1.10
-#peft==0.4.0
 pytorchvideo==0.1.5
 torchaudio==0.12.1
-#scipy==1.10.1
-#tensorboardX==2.6.1
-#tokenizers
-#tqdm==4.65.0
-#scikit-learn==1.3.0
-#braceexpand==0.1.7
-#webdataset==0.2.48
 SoundFile==0.12.1
-
 python-magic==0.4.27
 ffmpeg-python==0.2.0
-#librosa==0.10.2.post1
