--- a/requirements.txt
+++ b/requirements.txt
@@ -17,7 +17,51 @@ kazoo==2.10.0
 pycurl==7.45.3
 certifi==2019.11.28
 transformers==4.41.2
+
+# s2_inference:
+more_itertools
+boto3==1.25.4
+botocore==1.28.4
+nltk==3.7
+torch==1.12.1
+torchvision==0.13.1
+Pillow==9.3.0
+numpy==1.23.4
+validators==0.20.0
+sentence-transformers==2.2.2
+open_clip_torch==2.24.0
+clip-marqo==1.0.2
+onnx
+protobuf
+onnxruntime==1.13.1
+pandas==1.5.1
 optimum==1.20.0
+opencv-python-headless==4.6.0.66
+psutil==5.9.4
+multilingual-clip==1.0.10
+redis==4.4.2
+readerwriterlock==1.0.9
+cachetools==5.3.1
+
+# pin specific packages (last working 0.0.19 image)
+# to fix ARM64 build scikit-learn error
+platformdirs==3.5.0
+safetensors==0.4.1
+timm==0.9.12
+
+flatbuffers==23.5.9
+certifi==2019.11.28
+idna==2.8
+six==1.14.0
+typing-extensions==4.5.0
+urllib3==1.26.0
+pydantic==1.10.11
+httpx==0.25.0
+
+# test requirements
+pyvespa==0.37.1
+pytest==7.4.3
+
 
 # LanguageBind
 
