--- a/.github/workflows/cpu_local_marqo.yml
+++ b/.github/workflows/cpu_local_marqo.yml
@@ -2,39 +2,50 @@ name: cpu_local_marqo_API_tests
 # runs API Tests on CPU-only instance with Vespa and Marqo running in two separate docker containers
 
 on:
-  workflow_call:
   workflow_dispatch:
     inputs:
-      py_marqo_branch:
-        required: false
-        default: mainline
+      marqo_base_ref:
+        description: 'marqo branch-name, commit SHA or tag'
+        required: true
+        default: 'mainline'
+
+      test_suite:
+        type: choice
+        required: true
+        options:
+          - locustfile.py
         description: >
-          The "py-marqo" branch this test is running against.
-          This is optional. If left as the default value "mainline", we run the test based on the "mainline" branch of
-          py-marqo. Otherwise, the specified branch is tested. For example "li/test-xx". You can also use "marqo" and 
-          it will use the latest pypi release.
-      api_tests_branch:
+          Location of the locustfile that contains the test suite. This works as the entrypoint
+
+      number_of_users:
+        type: string
         required: false
-        default: mainline
+        default: "10"
         description: >
-          The "api-tests" branch this test is running against.
-          This is optional. If left as the default value "mainline", we run the api tests based at branch
-          "mainline". Otherwise, the specified branch is tested. For example "li/test-xx"
+          Total number of simulated users
+
+      user_spawn_rate:
+        type: string
+        required: false
+        default: "5"
+        description: >
+          Users spawned per second
+
+      duration:
+        type: string
+        required: false
+        default: "60"
+        description: >
+          How long stress testing will go on
+
       image_to_test:
+        type: string
         required: false
         # This is the name of the docker image that is built by the build script:
         default: marqo_docker_0
         description: >
           This is optional. If left as the default value "marqo_docker_0", the docker image built from this branch is tested.
           Otherwise, the specified docker image is tested. For example "marqoai/marqo:test"
-  push:
-    branches:
-      - mainline
-    paths-ignore:
-      - '**.md'
-
-permissions:
-  contents: read
 
 jobs:
   Start-Runner:
@@ -62,62 +73,41 @@ jobs:
           security-group-id: ${{ secrets.AMD_SECURITY_GROUP_ID }}
 
   Test-Marqo:
-    name: Run CPU Local Marqo API Tests
+    name: Run CPU Docker Marqo API Tests
     needs: Start-Runner # required to start the main job when the runner is ready
     runs-on: ${{ needs.start-runner.outputs.label }} # run the job on the newly created runner
-                
-    environment: marqo-test-suite 
-    
+
+    environment: marqo-test-suite
+
     steps:
-       
+
       - name: Checkout marqo repo
         uses: actions/checkout@v3
         with:
-          fetch-depth: 0
+          repository: marqo-ai/marqo
+          ref: ${{ github.event.inputs.marqo_ref }}
 
       - name: Set up Python 3.8
         uses: actions/setup-python@v3
         with:
           python-version: "3.8"
           cache: "pip"
-          
-      - name: Install Dependencies
-        run: |
-          #pip install -r requirements.txt
-          pip install tox==3.26
-          pip install flake8
 
-      - name: Set MQ_PY_MARQO_BRANCH variable
+#      - name: Set up Docker Buildx
+#        uses: docker/setup-buildx-action@v2
+
+      - name: Run Perf Tests
         run: |
-          if [[ "${{ inputs.py_marqo_branch }}" == "marqo" ]]; then
-            echo "MQ_PY_MARQO_BRANCH=marqo" >> $GITHUB_ENV
-          elif [[ "${{ inputs.py_marqo_branch }}" == "" ]]; then
-            echo "MQ_PY_MARQO_BRANCH=git+https://github.com/marqo-ai/py-marqo.git@mainline" >> $GITHUB_ENV
-          else
-            echo "MQ_PY_MARQO_BRANCH=git+https://github.com/marqo-ai/py-marqo.git@${{ inputs.py_marqo_branch }}" >> $GITHUB_ENV
-          fi
-  
-      - name: Checkout marqo-api-tests repo
-        uses: actions/checkout@v3
-        with:
-          repository: marqo-ai/marqo-api-tests
-          ref: ${{ github.event.inputs.api_tests_branch }}
+          docker run -d --name marqo -it -p 8882:8882 marqo-ai/marqo:latest
+          # wait for marqo to start
+          until [[ $(curl -v --silent --insecure http://localhost:8882 2>&1 | grep Marqo) ]]; do
+              sleep 0.1;
+          done;
           
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
-          
-      - name: Set up Environment
-        run: |
-          # Set up conf file
-          echo 'export MARQO_API_TESTS_ROOT="${{ github.workspace }}"' >> conf
-          
-      - name: Run Integration Tests - CPU Local Marqo
-        run: |
-          export MQ_API_TEST_BRANCH=$(echo "${GITHUB_REF}" | cut -d'/' -f3-)
-          CUSTOM_TEST_IMG="${{ github.event.inputs.image_to_test }}"
-          export MQ_API_TEST_IMG=${CUSTOM_TEST_IMG:-"marqo_docker_0"}
-          tox -e py3-local_marqo
-  
+          cd marqo/perf_tests
+          pip install -r requirements.txt
+          locust
+
   Stop-Runner:
     name: Stop self-hosted EC2 runner
     needs:
