--- a/.github/workflows/cpu_local_marqo.yml
+++ b/.github/workflows/cpu_local_marqo.yml
@@ -98,7 +98,7 @@ jobs:
 
       - name: Run Perf Tests
         run: |
-          docker run -d --name marqo -it -p 8882:8882 marqo-ai/marqo:latest
+          docker run -d --name marqo -it -p 8882:8882 marqoai/marqo:latest
           # wait for marqo to start
           until [[ $(curl -v --silent --insecure http://localhost:8882 2>&1 | grep Marqo) ]]; do
               sleep 0.1;
