Add readme file

--- a/perf_tests/locust.conf
+++ b/perf_tests/locust.conf
@@ -1,5 +1,5 @@
 # Location of the locustfile. This works as the entrypoint
-locustfile = locustfile.py
+locustfile = random_index_and_tensor_search.py
 
 # Whether to run with or without the GUI
 headless = true
