installl libmagic in github runners and cleanup

--- a/.github/workflows/largemodel_unit_test_CI.yml
+++ b/.github/workflows/largemodel_unit_test_CI.yml
@@ -62,11 +62,12 @@ jobs:
           repository: marqo-ai/marqo-base
           path: marqo-base
 
-      - name: Install FFmpeg
+      - name: Install FFmpeg and libmagic
         run: |
           sudo apt-get update
-          sudo apt-get install -y ffmpeg
+          sudo apt-get install -y ffmpeg libmagic1
           ffmpeg -version  # Verify installation
+          magic -v  # Verify installation
 
       - name: Install dependencies
         run: |
