--- a/.github/workflows/largemodel_unit_test_CI.yml
+++ b/.github/workflows/largemodel_unit_test_CI.yml
@@ -67,7 +67,7 @@ jobs:
           sudo apt-get update
           sudo apt-get install -y ffmpeg libmagic1
           ffmpeg -version  # Verify installation
-          magic -v  # Verify installation
+          file --version   # Verify libmagic installation and version
 
       - name: Install dependencies
         run: |
