--- a/.github/workflows/unit_test_200gb_CI.yml
+++ b/.github/workflows/unit_test_200gb_CI.yml
@@ -68,7 +68,7 @@ jobs:
           sudo apt-get update
           sudo apt-get install -y ffmpeg libmagic1
           ffmpeg -version  # Verify installation
-          magic -v  # Verify installation
+          file --version   # Verify libmagic installation and version
       - name: Install dependencies
         run: |
           pip install -r marqo-base/requirements.txt
