--- a/.github/workflows/arm64_docker_marqo.yml
+++ b/.github/workflows/arm64_docker_marqo.yml
@@ -87,6 +87,28 @@ jobs:
           #pip install -r requirements.txt
           pip install tox==3.26
           pip install flake8
+
+      - name: Install system dependencies for decord
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y build-essential python3-dev python3-setuptools make cmake
+          sudo apt-get install -y ffmpeg libavcodec-dev libavfilter-dev libavformat-dev libavutil-dev
+      
+      - name: Clone and build decord
+        run: |
+          git clone --recursive https://github.com/dmlc/decord
+          cd decord
+          mkdir build && cd build
+          cmake .. -DUSE_CUDA=0 -DCMAKE_BUILD_TYPE=Release
+          make -j$(nproc)
+
+      - name: Install decord
+        run: |
+          cd decord/python
+          pip install .
+
+      - name: Set LD_PRELOAD for decord
+        run: echo "LD_PRELOAD=/usr/lib/aarch64-linux-gnu/libffi.so.7" >> $GITHUB_ENV
       
       # TODO: linting here
   
