--- a/.github/workflows/arm64_docker_marqo.yml
+++ b/.github/workflows/arm64_docker_marqo.yml
@@ -113,9 +113,9 @@ jobs:
         run: |
           cd $DECORD_BUILD_DIR/..
           pwd
-          cd python3
+          cd python
           pip install .
-          echo "Decord installed in: $(python3 -c 'import decord; print(decord.__file__)')"
+          echo "Decord installed in: $(python -c 'import decord; print(decord.__file__)')"
 
       - name: Verify decord installation
         run: |
