--- a/.github/workflows/largemodel_unit_test_CI.yml
+++ b/.github/workflows/largemodel_unit_test_CI.yml
@@ -9,6 +9,9 @@ on:
       - mainline
     paths-ignore:
       - '**.md'
+  pull_request:
+    branches:
+      - mainline
 
 permissions:
   contents: read
