--- a/.github/workflows/largemodel_unit_test_CI.yml
+++ b/.github/workflows/largemodel_unit_test_CI.yml
@@ -49,13 +49,20 @@ jobs:
     steps:
       - name: Expand root volume
         run: |
+          sudo apt-get update
+          sudo apt-get install -y awscli
+          sudo apt-get install -y jq
+          # Fetch the EC2 metadata and modify the volume size
           TOKEN=$(curl -X PUT "http://169.254.169.254/latest/api/token" -H "X-aws-ec2-metadata-token-ttl-seconds: 21600")
           INSTANCE_ID=$(curl -H "X-aws-ec2-metadata-token: $TOKEN" -v http://169.254.169.254/latest/meta-data/instance-id)
           VOLUME_ID=$(aws ec2 describe-volumes --filters Name=attachment.instance-id,Values=$INSTANCE_ID | jq -r .Volumes[0].Attachments[0].VolumeId)
+          
           echo $INSTANCE_ID
           echo $VOLUME_ID
+          
           aws ec2 modify-volume --volume-id $VOLUME_ID --size 400
           sleep 15
+          
           growpart /dev/nvme0n1 1
           lsblk
           xfs_growfs -d /
