--- a/.github/workflows/largemodel_unit_test_CI.yml
+++ b/.github/workflows/largemodel_unit_test_CI.yml
@@ -38,6 +38,8 @@ jobs:
           github-token: ${{ secrets.GH_PERSONAL_ACCESS_TOKEN }}
           ec2-image-id: ami-03f8729795bfb473a
           ec2-instance-type: g4dn.2xlarge
+          subnet-id: subnet-0718f8f98cdef0074
+          security-group-id: sg-03bd8d27a1e616cfe
 
   Test-Marqo:
     name: Run Large Model Unit Tests
