--- a/.github/workflows/largemodel_unit_test_CI.yml
+++ b/.github/workflows/largemodel_unit_test_CI.yml
@@ -155,8 +155,8 @@ jobs:
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v1
         with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-access-key-id: ${{ secrets.LARGEMODELTEST_ACCESSKEY }}
+          aws-secret-access-key: ${{ secrets.LARGEMODELTEST_SECRETACCESSKEY }}
           aws-region: ${{ secrets.LARGEMODELTEST_AWS_REGION }}
       - name: Stop EC2 runner
         uses: machulav/ec2-github-runner@v2
