--- a/.github/workflows/cuda_docker_marqo.yml
+++ b/.github/workflows/cuda_docker_marqo.yml
@@ -119,24 +119,24 @@ jobs:
           export MQ_API_TEST_IMG=${CUSTOM_TEST_IMG:-"marqo_docker_0"}
           tox -e py3-cuda_docker_marqo
   
-  Stop-Runner:
-    name: Stop self-hosted EC2 runner
-    needs:
-      - Start-Runner # required to get output from the start-runner job
-      - Test-Marqo # required to wait when the main job is done
-    runs-on: ubuntu-latest
-    if: ${{ always() }} # required to stop the runner even if the error happened in the previous jobs
-    steps:
-      - name: Configure AWS credentials
-        uses: aws-actions/configure-aws-credentials@v1
-        with:
-          aws-access-key-id: ${{ secrets.LARGEMODELTEST_ACCESSKEY }}
-          aws-secret-access-key: ${{ secrets.LARGEMODELTEST_SECRETACCESSKEY }}
-          aws-region: ${{ secrets.LARGEMODELTEST_AWS_REGION }}
-      - name: Stop EC2 runner
-        uses: machulav/ec2-github-runner@v2
-        with:
-          mode: stop
-          github-token: ${{ secrets.GH_PERSONAL_ACCESS_TOKEN }}
-          label: ${{ needs.start-runner.outputs.label }}
-          ec2-instance-id: ${{ needs.start-runner.outputs.ec2-instance-id }}
+#  Stop-Runner:
+#    name: Stop self-hosted EC2 runner
+#    needs:
+#      - Start-Runner # required to get output from the start-runner job
+#      - Test-Marqo # required to wait when the main job is done
+#    runs-on: ubuntu-latest
+#    if: ${{ always() }} # required to stop the runner even if the error happened in the previous jobs
+#    steps:
+#      - name: Configure AWS credentials
+#        uses: aws-actions/configure-aws-credentials@v1
+#        with:
+#          aws-access-key-id: ${{ secrets.LARGEMODELTEST_ACCESSKEY }}
+#          aws-secret-access-key: ${{ secrets.LARGEMODELTEST_SECRETACCESSKEY }}
+#          aws-region: ${{ secrets.LARGEMODELTEST_AWS_REGION }}
+#      - name: Stop EC2 runner
+#        uses: machulav/ec2-github-runner@v2
+#        with:
+#          mode: stop
+#          github-token: ${{ secrets.GH_PERSONAL_ACCESS_TOKEN }}
+#          label: ${{ needs.start-runner.outputs.label }}
+#          ec2-instance-id: ${{ needs.start-runner.outputs.ec2-instance-id }}
