--- a/.github/workflows/unit_test_200gb_CI.yml
+++ b/.github/workflows/unit_test_200gb_CI.yml
@@ -101,8 +101,6 @@ jobs:
           export VESPA_CONFIG_URL=http://localhost:19071
           export VESPA_DOCUMENT_URL=http://localhost:8080
           export VESPA_QUERY_URL=http://localhost:8080
-          export MARQO_MAX_CPU_MODEL_MEMORY=15
-          # TODO: move this to largemodel_unit_test_CI.yml
           
           cd marqo/scripts/vespa_local
           set -x
@@ -139,9 +137,11 @@ jobs:
           export VESPA_CONFIG_URL=http://localhost:19071
           export VESPA_DOCUMENT_URL=http://localhost:8080
           export VESPA_QUERY_URL=http://localhost:8080
+          export MARQO_MAX_CPU_MODEL_MEMORY=15
+          # TODO: move this to largemodel_unit_test_CI.yml
 
           export PYTHONPATH="./marqo/tests:./marqo/src:./marqo"
-          pytest marqo/tests --ignore=marqo/tests/test_documentation.py
+          pytest marqo/tests --ignore=marqo/tests/test_documentation.pyf
   
   Stop-Runner:
     name: Stop self-hosted EC2 runner
