--- a/.github/workflows/unit_test_200gb_CI.yml
+++ b/.github/workflows/unit_test_200gb_CI.yml
@@ -141,7 +141,7 @@ jobs:
           # TODO: move this to largemodel_unit_test_CI.yml
 
           export PYTHONPATH="./marqo/tests:./marqo/src:./marqo"
-          pytest marqo/tests --ignore=marqo/tests/test_documentation.pyf
+          pytest marqo/tests --ignore=marqo/tests/test_documentation.py
   
   Stop-Runner:
     name: Stop self-hosted EC2 runner
