--- a/.github/workflows/unit_test_200gb_CI.yml
+++ b/.github/workflows/unit_test_200gb_CI.yml
@@ -76,7 +76,6 @@ jobs:
           pip install -r marqo-base/requirements.txt
           # override base requirements with marqo requirements, if needed: 
           pip install -r marqo/requirements.dev.txt
-          pip install pytest==7.4.0
 
       - name: Build Vespa
         run: |
@@ -141,7 +140,13 @@ jobs:
           # TODO: move this to largemodel_unit_test_CI.yml
 
           export PYTHONPATH="./marqo/tests:./marqo/src:./marqo"
-          pytest marqo/tests --ignore=marqo/tests/test_documentation.py
+          pytest --ignore=marqo/tests/test_documentation.py --durations=100 --cov=src –cov-branch --cov-context=test --cov-report=html marqo/tests
+
+      - name: Upload Test Report
+        uses: actions/upload-artifact@v4
+        with:
+          name: marqo-test-report
+          path: marqo/htmlcov/
   
   Stop-Runner:
     name: Stop self-hosted EC2 runner
