--- a/.github/workflows/unit_test_200gb_CI.yml
+++ b/.github/workflows/unit_test_200gb_CI.yml
@@ -140,7 +140,7 @@ jobs:
           # TODO: move this to largemodel_unit_test_CI.yml
 
           export PYTHONPATH="./marqo/tests:./marqo/src:./marqo"
-          pytest --ignore=marqo/tests/test_documentation.py --durations=100 --cov=src –cov-branch --cov-context=test --cov-report=html marqo/tests
+          pytest --ignore=marqo/tests/test_documentation.py --durations=100 --cov=src --cov-branch --cov-context=test --cov-report=html marqo/tests
 
       - name: Upload Test Report
         uses: actions/upload-artifact@v4
